--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vuetify": "^3.9.0"
   },
